test/fail/int_atom_string_reversed.j
class A {
    Void main() { return 5 + i + "a"; }
}
